** Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
** Use Server/configFiles/log4j2.xml (instead of log4j.properties)
** Wrq2SqlServlet has restricted access permissions now requiring bcdAdmin:ImplementationDetails as it reveals implementation details (actual names of db objects)

.All versions of 3rd party libraries for runtime, are listed in
* bcdui_dependencies.gradle for java
* gradle.properties for javascript

.Build:
* Updated to gradle 7.0, including switching to com.github.node-gradle.node plugin and node-js version 12.13 (LTS)
* Updated to babel-js, node-sass and jsdoc, see build_package.json

.Core:
* _getFillParams which is used in read, write, query, queryNodes can handle xPaths with * now

.Components:
* Grid
** use div container
** new option defaultButtons=true to show/hide action button
** allow button actions to be triggered via bcdGrid:save, bcdGrid:reset, bcdGrid:addRow on targetHtml
** fix grouped headers to not clip long cells

* DocUploader
** initial commit of a document uploader component, uses VFS (bcd_docUpload binding) to store data on scope/instance level (scope subjectsettings)

* Scorecard
** fix aspect definitions with multiple chooseCalc when statements
** calc:AspectRef can directly address a bindingItemId now

* Charts
** align echart adapter to support getData() and set chart:ChartsDrawn
** fix configurationFromWRS to correctly use unit and caption information in case of a standard cube (1rowDim/1colDim/1measure)

.Widgets
* InputField
** fix not disabled field until options model is ready (in case of wrapped optionmodels)

* fixedTableHeader
** createFixedTableHeader uses optimized and more compatible code
** new htmlBuilder parameters createHeaderFilters and createFixHeader

* createTableHeadFilter
** add option valueCaptionProvider which allows asynchronous providing of code/caption data for filter dialog

* comment widget